--- a/debcompare/web/templates/compare.html
+++ b/debcompare/web/templates/compare.html
@@ -1,62 +1,57 @@
-<!doctype html>
-<html>
-  <head>
-    <title>{{differ.name}}: {{differ.old_version}} - {{differ.new_version}}</title>
-  </head>
-  <body>
-    <pre>
-      <h1>bug report</h1>
-       {% if differ.new_package.new_bugs %}
-        <table>
-          <thead>
-            <th>Date</th>
-            <th>Bug</th>
-            <th>Subject</th>
-          </thead>
-        </table>
-        <tbody>
-        {% for bug in differ.new_package.new_bugs %}
-          <tr>
-            <td>{{bug.date}}</td>
-            <td>
-              <a href="https://bugs.debian.org/cgi-bin/bugreport.cgi?bug={{bug.bug_num}}">
-                {{bug.bug_num}}
-              </a>
-            </td>
-            <td>{{ bug.subject }}</td>
-          </tr>
-         {% endfor %}
-        </tbody>
-      </table>
-       {% endif %}
-    </pre>
-    <pre>
-      <h1>CVE report</h1>
-       {% if differ.fixed_cves %}
-        <table>
-          <thead>
-            <th>CVE</th>
-            <th>scope</th>
-            <th>description</th>
-          </thead>
-          <tbody>
-         {% for cve in differ.fixed_cves %}
-          <tr>
-            <td>
-              <a href="https://security-tracker.debian.org/tracker/{{cve.cve}}">{{cve.cve}}</a>
-            </td>
-            <td>{{cve.scope}}</td>
-            <td>{{cve.description}}</td>
-          </tr>
-         {% endfor %}
-         </tbody>
-        </table>
-       {% endif %}
-    </pre>
-    <pre>
-      <h1>Diff report</h1>
-      {{differ.diff.decode()}}
-    </pre>
-  </body>
-</html>
-
+{% extends "bootstrap/base.html" %}
+{% block title %}{{differ.name}}: {{differ.old_version}} - {{differ.new_version}}{% endblock %}
+{% block content %}
+<pre>
+  <h1>bug report</h1>
+    {% if differ.new_package.new_bugs %}
+    <table>
+      <thead>
+        <th>Date</th>
+        <th>Bug</th>
+        <th>Subject</th>
+      </thead>
+    </table>
+    <tbody>
+    {% for bug in differ.new_package.new_bugs %}
+      <tr>
+        <td>{{bug.date}}</td>
+        <td>
+          <a href="https://bugs.debian.org/cgi-bin/bugreport.cgi?bug={{bug.bug_num}}">
+            {{bug.bug_num}}
+          </a>
+        </td>
+        <td>{{ bug.subject }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+    {% endif %}
+</pre>
+<pre>
+  <h1>CVE report</h1>
+    {% if differ.fixed_cves %}
+    <table>
+      <thead>
+        <th>CVE</th>
+        <th>scope</th>
+        <th>description</th>
+      </thead>
+      <tbody>
+      {% for cve in differ.fixed_cves %}
+      <tr>
+        <td>
+          <a href="https://security-tracker.debian.org/tracker/{{cve.cve}}">{{cve.cve}}</a>
+        </td>
+        <td>{{cve.scope}}</td>
+        <td>{{cve.description}}</td>
+      </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+    {% endif %}
+</pre>
+<pre>
+  <h1>Diff report</h1>
+  {{differ.diff.decode()}}
+</pre>
+{% endblock %}
